--- a/week02/week02_assignment_1.ipynb
+++ b/week02/week02_assignment_1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/week02/week02_assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1E0ykn-hA8yB",
         "nbgrader": {
           "grade": false,
@@ -517,7 +527,8 @@
   "metadata": {
     "celltoolbar": "Create Assignment",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
