--- a/week02/week02_assignment_1.ipynb
+++ b/week02/week02_assignment_1.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 16,
       "metadata": {
         "id": "txhgQtaOA8yD"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 17,
       "metadata": {
         "id": "27AvDkGrA8yE"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 18,
       "metadata": {
         "id": "PnaMXh67A8yE"
       },
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {
         "id": "YP3tkaf5A8yF"
       },
@@ -217,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {
         "id": "yBmK_LrgA8yF"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "metadata": {
         "id": "TNziE3W7A8yF"
       },
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 22,
       "metadata": {
         "id": "FU2pVQqfA8yF"
       },
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {
         "id": "u8U0w6UnA8yF"
       },
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "id": "r73h2HwyA8yG"
       },
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "id": "uY3QDwvPA8yG"
       },
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {
         "id": "oUOJFhtlA8yG"
       },
@@ -432,13 +432,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_DeJ6UEPIywx",
-        "outputId": "7cdf6c24-89c8-4994-cf07-e0426a3ec8e4"
+        "outputId": "cb497627-af18-40ba-c5b7-82e0bd64bb28"
       },
       "outputs": [
         {
@@ -446,28 +446,13 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: httpimport in /usr/local/lib/python3.10/dist-packages (1.3.1)\n",
-            "Collecting boto3\n",
-            "  Downloading boto3-1.28.45-py3-none-any.whl (135 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.8/135.8 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting botocore<1.32.0,>=1.31.45 (from boto3)\n",
-            "  Downloading botocore-1.31.45-py3-none-any.whl (11.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.2/11.2 MB\u001b[0m \u001b[31m88.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting jmespath<2.0.0,>=0.7.1 (from boto3)\n",
-            "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-            "Collecting s3transfer<0.7.0,>=0.6.0 (from boto3)\n",
-            "  Downloading s3transfer-0.6.2-py3-none-any.whl (79 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.8/79.8 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.45->boto3) (2.8.2)\n",
-            "Collecting urllib3<1.27,>=1.25.4 (from botocore<1.32.0,>=1.31.45->boto3)\n",
-            "  Downloading urllib3-1.26.16-py2.py3-none-any.whl (143 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.1/143.1 kB\u001b[0m \u001b[31m19.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.32.0,>=1.31.45->boto3) (1.16.0)\n",
-            "Installing collected packages: urllib3, jmespath, botocore, s3transfer, boto3\n",
-            "  Attempting uninstall: urllib3\n",
-            "    Found existing installation: urllib3 2.0.4\n",
-            "    Uninstalling urllib3-2.0.4:\n",
-            "      Successfully uninstalled urllib3-2.0.4\n",
-            "Successfully installed boto3-1.28.45 botocore-1.31.45 jmespath-1.0.1 s3transfer-0.6.2 urllib3-1.26.16\n",
+            "Requirement already satisfied: boto3 in /usr/local/lib/python3.10/dist-packages (1.28.45)\n",
+            "Requirement already satisfied: botocore<1.32.0,>=1.31.45 in /usr/local/lib/python3.10/dist-packages (from boto3) (1.31.45)\n",
+            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/lib/python3.10/dist-packages (from boto3) (1.0.1)\n",
+            "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from boto3) (0.6.2)\n",
+            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.45->boto3) (2.8.2)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.45->boto3) (1.26.16)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.32.0,>=1.31.45->boto3) (1.16.0)\n",
             "=============================================\n",
             "== RESULTS for hgugulothu@slu.edu\n",
             "=============================================\n",
