--- a/week03/week03_assignment_2.ipynb
+++ b/week03/week03_assignment_2.ipynb
@@ -20,7 +20,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "jdpN-zK0YVg5"
+        "id": "DFGWaRLSxrJ3"
       },
       "source": [
         "# Week 3 Exercises\n",
@@ -34,7 +34,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lAudlKKSYVg7"
+        "id": "A9v6b5l5xrJ5"
       },
       "source": [
         "**WHAT I PROVIDE:**\n",
@@ -64,7 +64,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1WBasIGLYVg8"
+        "id": "wg6vamTIxrJ5"
       },
       "source": [
         "---\n",
@@ -78,7 +78,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PrMWN57tYVg8"
+        "id": "euTADi30xrJ6"
       },
       "source": [
         "### 14.1 Difference in rate per 1,000\n",
@@ -90,9 +90,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
-        "id": "Axp521lmYVg8"
+        "id": "1dggWwkJxrJ6"
       },
       "outputs": [],
       "source": [
@@ -108,43 +108,64 @@
         "    rate_a = count_a / total_a * 1000\n",
         "    rate_b = count_b / total_b * 1000\n",
         "\n",
-        "    rate_a = count_a / total_a * 1000\n",
-        "    rate_b = count_b / total_b * 1000\n",
-        "    if total_a/total_b>100 or total_b/total_a>100:\n",
-        "      msg=\"The total populations in A and B are so different that they can't be compared\"\n",
-        "      #Compare Occurance rates\n",
-        "      if rate_a==rate_b:\n",
-        "        msg=\"The rate in A and the rate in B are the same({}).\".format(rate_a)\n",
-        "      elif rate_a>rate_b:\n",
-        "          msg=\"The rate in A ({}) is greater than the rate in B\"\n",
-        "      else:\n",
-        "        msg=\"The ratein A ({}) is greater less than the rate in B({}) format(rate_a,rate_b)\"\n",
+        "    if rate_a == rate_b:\n",
+        "        msg = \"The rate in A and the rate in B are the same ({}).\".format(rate_a)\n",
+        "    elif rate_a > rate_b:\n",
+        "        msg = \"The rate in A ({}) is greater than the rate in B ({}).\".format(rate_a, rate_b)\n",
+        "    else:\n",
+        "        msg = \"The rate in A ({}) is less than the rate in B ({})\".format(rate_a, rate_b)\n",
         "\n",
         "    return msg"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
-        "id": "WP_r8-LeYVg9"
+        "id": "N91uRIkhxrJ6",
+        "outputId": "e83338d7-48b2-43df-c996-86225c95bae4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The rate in A (1.0) is less than the rate in B (1.5)\n"
+          ]
+        }
+      ],
+      "source": [
+        "rate_covid_testing = diff_in_rate_normalized(1,1000,15,10000)\n",
+        "print(rate_covid_testing)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
-        "id": "yXj-7hh7YVg9"
+        "id": "zsDgD9mWxrJ7",
+        "outputId": "869df01c-06ae-4384-bb7c-356f87e22bf1"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'The rate in A and the rate in B are the same (3.0).'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "diff_in_rate_normalized(3,1000,30,10000)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KAZ6pc6QYVg9"
+        "id": "2JxmKzmgxrJ7"
       },
       "source": [
         "### 14.2 Trimming outliers\n",
@@ -156,9 +177,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 64,
       "metadata": {
-        "id": "ZcqwsU1gYVg-"
+        "id": "QFGWHSkOxrJ7"
       },
       "outputs": [],
       "source": [
@@ -174,46 +195,52 @@
         "    If total_a / total_b > 100 OR total_b / total_a > 100 then we'll return a message saying the two can't be compared.\n",
         "    \"The total populations in A and B are so different that they can't be compared.\"\n",
         "    \"\"\"\n",
-        "    if ((total_a / total_b) > 100) or ((total_b / total_a) > 100):\n",
-        "      msg=\"The total populations in A and B are so different that they can't be compared\"\n",
-        "    else:\n",
-        "      rate_a = count_a / count_a * 1000\n",
-        "      rate_b = count_b / count_b * 1000\n",
+        "    rate_a = count_a/total_a * 1000\n",
+        "    rate_b = count_b/total_b * 1000\n",
         "\n",
-        "      if rate_a == rate_b:\n",
-        "        msg = \"The rates in A and B are same: {} per 1,000\" . format(rate_a, rate_b)\n",
-        "      elif rate_a > rate_b:\n",
-        "        msg = \"The rate in A ({}) is greater than rate in B ({}) per 1000\" . format(rate_a, rate_b)\n",
-        "      else:\n",
-        "        msg = \"The rate in A ({}) is less than rate in B ({}) per 1000\" . format(rate_a, rate_b)\n",
+        "    if total_a / total_b > 100 or total_b / total_a > 100:\n",
+        "        msg = \"The total populations in A and B are so different that they can't be compared.\"\n",
+        "    else:\n",
+        "        # Compare occurrence rates\n",
+        "        if rate_a == rate_b:\n",
+        "            msg = \"The rate in A and the rate in B are the same ({}).\".format(rate_a)\n",
+        "        elif rate_a > rate_b:\n",
+        "            msg = \"The rate in A ({}) is greater than the rate in B ({}).\".format(rate_a, rate_b)\n",
+        "        else:\n",
+        "            msg = \"The rate in A ({}) is less than the rate in B ({})\".format(rate_a, rate_b)\n",
+        "\n",
+        "    return msg\n",
+        "    # Do some work to write a msg\n",
+        "    # Do some work to write a msg\n",
+        "    msg = \"I didn't write any code, yet\"\n",
         "\n",
         "    return msg"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 65,
       "metadata": {
+        "id": "a8VhulyVxrJ7",
+        "outputId": "d01fda0c-b05f-48f6-fa09-3feb7a1de30b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "eJwzL2QAYVg-",
-        "outputId": "153e1cfd-c5ff-4dc3-fa7a-9a63fe12f937"
+        }
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'The rates in A and B are same: 1000.0 per 1,000'"
+              "'The rate in A (10.893246187363834) is greater than the rate in B (3.5294117647058827).'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 65
         }
       ],
       "source": [
@@ -230,7 +257,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "LEgO7IbTYVg-"
+        "id": "vaMUUbZrxrJ8"
       },
       "source": [
         "### 14.3 LACE Score\n",
@@ -241,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 66,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -250,7 +277,7 @@
           "schema_version": 1,
           "solution": true
         },
-        "id": "Ugqoo8bmYVg-"
+        "id": "Hb9MTYboxrJ8"
       },
       "outputs": [],
       "source": [
@@ -267,52 +294,57 @@
         "\n",
         "    \"\"\"\n",
         "    score = 0\n",
-        "    # length of stay\n",
-        "    if length_of_stay<1:\n",
-        "      score+=0\n",
-        "    elif length_of_stay==1:\n",
-        "      score+=1\n",
-        "    elif length_of_stay ==2:\n",
-        "        score+=2\n",
-        "    elif length_of_stay==3:\n",
-        "          score+=3\n",
-        "    elif length_of_stay==4:\n",
-        "            score+=4\n",
-        "    else:\n",
-        "              score+=5\n",
-        "              #Acute Admission\n",
-        "              if acute_flag:\n",
-        "                score+=3\n",
-        "                #Charslon Comorbidity Index\n",
-        "                if charlson==0:\n",
-        "                  score+=0\n",
-        "                elif charlson==1:\n",
-        "                    score+=1\n",
-        "                elif charlson==2:\n",
-        "                      score+=2\n",
-        "                elif charlson==3:\n",
-        "                        score+=3\n",
-        "                else:\n",
-        "                          score+=5\n",
-        "                          #Emergency Department Visits\n",
-        "                          if ed_visits==0:\n",
-        "                            score+=0\n",
-        "                          elif ed_visits==1:\n",
-        "                            score+=1\n",
-        "                          elif ed_visits ==2:\n",
-        "                            score+=2\n",
-        "                          elif ed_visits==3:\n",
-        "                            score+=3\n",
-        "                          else:\n",
-        "                            score+=4\n",
+        "    if length_of_stay >= 14 :\n",
+        "      score += 7\n",
+        "    elif length_of_stay >= 7 and length_of_stay <=13 :\n",
+        "      score += 5\n",
+        "    elif length_of_stay >= 4 and length_of_stay <=6 :\n",
+        "      score += 4\n",
+        "    elif length_of_stay == 3 :\n",
+        "      score += 3\n",
+        "    elif length_of_stay == 2 :\n",
+        "      score += 2\n",
+        "    elif length_of_stay == 1 :\n",
+        "      score += 1\n",
         "\n",
+        "    if acute_flag :\n",
+        "        score += 3\n",
+        "\n",
+        "    if charlson >=4 :\n",
+        "      score += 5\n",
+        "    elif charlson == 3 :\n",
+        "      score += 3\n",
+        "    elif charlson == 2 :\n",
+        "      score += 2\n",
+        "    elif charlson == 1 :\n",
+        "      score += 1\n",
+        "    elif charlson == 0 :\n",
+        "      score += 0\n",
+        "\n",
+        "    if ed_visits >= 4 :\n",
+        "      score += 4\n",
+        "    elif ed_visits == 3 :\n",
+        "      score += 3\n",
+        "    elif ed_visits == 2 :\n",
+        "      score == 2\n",
+        "    elif ed_visits == 1 :\n",
+        "      score == 1\n",
+        "    elif ed_visits == 0 :\n",
+        "      score += 0\n",
+        "\n",
+        "    return score\n",
+        "\n",
+        "    score = -1\n",
+        "\n",
+        "    return score\n",
+        "    score = -1\n",
         "\n",
         "    return score"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 67,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -322,16 +354,19 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "tKxZIhzOYVg-"
+        "id": "7TVz2sKSxrJ8"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "assert LACE(4, False, 1, 0) == 5\n",
+        "assert LACE(4, True, 4, 7) == 16"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
-        "id": "hyGDstG1YVg-"
+        "id": "dg_tilwjxrJ8"
       },
       "outputs": [],
       "source": []
@@ -346,7 +381,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "WVcBPLk4YVg-"
+        "id": "fl_fet6WxrJ8"
       },
       "source": [
         "### 14.4 Care Management Criteria\n",
@@ -360,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 68,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -369,7 +404,7 @@
           "schema_version": 1,
           "solution": true
         },
-        "id": "U8iiJLePYVg-"
+        "id": "nOp92YSixrJ8"
       },
       "outputs": [],
       "source": [
@@ -396,44 +431,23 @@
         "    >>> assign_care_coordinator('CHF', 7, 4, True, 4)\n",
         "    True\n",
         "    \"\"\"\n",
-        "    lace_score = 0\n",
+        "    lace_score = LACE(length_of_stay, acute_flag, charlson, ed_visits)\n",
+        "    assignment = lace_score > 10\n",
         "\n",
-        "    if length_of_stay<1:\n",
-        "       lace_score+=0\n",
-        "    elif length_of_stay==1:\n",
-        "       lace_score+=1\n",
-        "    elif length_of_stay==2:\n",
-        "       lace_score+=2\n",
-        "    elif length_of_stay==3:\n",
-        "      lace_score+=3\n",
-        "    elif length_of_stay==4:\n",
-        "      lace_score+=4\n",
-        "    else:lace_score+=5\n",
-        "    if acute_flag:lace_score+=3\n",
-        "    if charlson==0:lace_score+=0\n",
-        "    elif charlson==1:lace_score+=1\n",
-        "    elif charlson==2:lace_score+=2\n",
-        "    elif charlson==3:lace_score+=3\n",
-        "    else: lace_score+=5\n",
-        "    if ed_visits==0:lace_score+=0\n",
-        "    elif ed_visits==1:lace_score+=1\n",
-        "    elif ed_visits==2:lace_score+=2\n",
-        "    elif ed_visits==3:lace_score+=3\n",
-        "    else: lace_score+=4\n",
-        "    assignment = True\n",
-        "    if lace_score>10 or diagnosis_cd in ['CHF','COPD']:\n",
-        "      assignment: True\n",
-        "    else:\n",
-        "     assignment= False\n",
+        "    # Check if the diagnosis includes CHF or COPD (case-insensitive)\n",
+        "    if 'chf' in diagnosis_cd.lower() or 'copd' in diagnosis_cd.lower():\n",
+        "        assignment = True\n",
+        "\n",
         "    return assignment\n",
-        "\n",
+        "    assignment = True\n",
+        "    return assignment\n",
         "\n",
         ""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 69,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -443,7 +457,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "Siv3pSvgYVg-"
+        "id": "7wsBdw4gxrJ8"
       },
       "outputs": [],
       "source": [
@@ -456,9 +470,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
-        "id": "PXsV6cL8YVg-"
+        "id": "vmG3eNiNxrJ8"
       },
       "outputs": [],
       "source": []
@@ -466,7 +480,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HMk34z6hYVg_"
+        "id": "FyEKxE_QxrJ8"
       },
       "source": [
         "### 14.5 qCSI COVID-19 Severity Index\n",
@@ -484,9 +498,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 70,
       "metadata": {
-        "id": "pwRTWJWmYVg_"
+        "id": "HT-499ILxrJ8"
       },
       "outputs": [],
       "source": [
@@ -496,27 +510,47 @@
         "    * pulse_ox is an integer value (e.g. 30 means 30%)\n",
         "    * o2_flow is an integer value\n",
         "    \"\"\"\n",
+        "    if respiratory_rate > 28 :\n",
+        "        score_1 = 2\n",
+        "    elif respiratory_rate >= 23 and respiratory_rate <= 28 :\n",
+        "        score_1 = 1\n",
+        "    elif respiratory_rate <= 22 :\n",
+        "        score_1 = 0\n",
         "\n",
+        "    if pulse_ox <= 88 :\n",
+        "        score_2 = 5\n",
+        "    elif pulse_ox >=89 and pulse_ox <= 92 :\n",
+        "        score_2 = 2\n",
+        "    elif pulse_ox > 92 :\n",
+        "        score_2 = 0\n",
+        "\n",
+        "    if o2_flow >=5 and o2_flow <= 6 :\n",
+        "        score_3 = 5\n",
+        "    elif o2_flow >=3 and o2_flow <= 4 :\n",
+        "        score_3 = 4\n",
+        "    elif o2_flow <= 2 :\n",
+        "        score_3 = 0\n",
+        "\n",
+        "    Score = score_1 + score_2 + score_3\n",
+        "\n",
+        "    if(respiratory_rate <= 0):\n",
+        "        risk_level= \"invalid respiratory rate\"\n",
+        "    elif(pulse_ox <= 0 or pulse_ox > 100):\n",
+        "        risk_level= \"invalid pulse ox\"\n",
+        "    elif(o2_flow <= 0):\n",
+        "        risk_level= \"invalid O2 flow rate\"\n",
+        "    elif Score <= 3 :\n",
+        "        risk_level = \"low\"\n",
+        "    elif Score >=4 and Score < 6 :\n",
+        "        risk_level = \"low-intermediate\"\n",
+        "    elif Score >= 7 and Score < 9 :\n",
+        "        risk_level = \"high-intermediate\"\n",
+        "    elif Score >= 10 and Score < 12 :\n",
+        "        risk_level = \"high\"\n",
+        "\n",
+        "    return risk_level\n",
         "    ### BEGIN SOLUTION\n",
-        "    #Check for valid values\n",
-        "    if respiratory_rate<=0:return \"invalid respiratory rate\"\n",
-        "    if pulse_ox<=0 or pulse_ox>100:return \"invalid pulse ox\"\n",
-        "    if o2_flow<=0:return \"invalid o2 flow rate\"\n",
-        "    #calculate the total risk score based on the provided point values total_scores=0\n",
-        "    if respiratory_rate<=22:total_score+=0\n",
-        "    elif respiratory_rate<=28:total_score+=1\n",
-        "    else:total_score+=2\n",
-        "    if pulse_ox>92:total_score+=0\n",
-        "    elif pulse_ox>89:total_score+=2\n",
-        "    else: total_score+=5\n",
-        "    if o2_flow<=2:total_score+=0\n",
-        "    elif o2_flow<=4:total_score+=4\n",
-        "    else:total_score+=5\n",
-        "    #Dtermine the risk level based on total score\n",
-        "    if total_score<=3:return'low'\n",
-        "    elif total_score<=6:return'low-intermediate'\n",
-        "    elif total_score<=9:return'high-intermediate'\n",
-        "    else:return 'high'\n",
+        "\n",
         "    ### END SOLUTION\n",
         "\n",
         "    return risk"
@@ -524,17 +558,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 71,
       "metadata": {
-        "id": "2rC9xQPWYVg_"
+        "id": "Ogz6uZK5xrJ8"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "assert (qcsi(29, 95, 1) == 'low')\n",
+        "assert (qcsi(20, 93, 1) == 'low')\n",
+        "assert (qcsi(29, 88, 1) == 'high-intermediate')\n",
+        "assert (qcsi(29, 88, 4) == 'high')\n",
+        "assert (qcsi(30, 90, 1) == 'low-intermediate')\n",
+        "assert (qcsi(28, 92, -1) == 'invalid O2 flow rate')\n",
+        "assert (qcsi(22, 0, 4) == 'invalid pulse ox')\n",
+        "assert (qcsi(0, 97, 2) == 'invalid respiratory rate')"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UHYT2FAvYVg_"
+        "id": "g6viR-BQxrJ8"
       },
       "source": [
         "---\n",
@@ -561,7 +604,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GN08F6dkYVg_"
+        "id": "OL804hBHxrJ8"
       },
       "source": [
         "---"
