--- a/week06/week06_assignment_2.ipynb
+++ b/week06/week06_assignment_2.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/week06/week06_assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "nbgrader": {
           "grade": false,
           "grade_id": "q1-description",
@@ -92,11 +102,11 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "KvYYHWj5XtMJ",
-        "outputId": "f989d58f-bfad-4f4c-cf10-fc11fb68540f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KvYYHWj5XtMJ",
+        "outputId": "f989d58f-bfad-4f4c-cf10-fc11fb68540f"
       },
       "outputs": [
         {
@@ -178,11 +188,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "FRsfojNsXtMK",
-        "outputId": "848fcb98-9bfb-4636-e30b-3e0b9ba91078",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FRsfojNsXtMK",
+        "outputId": "848fcb98-9bfb-4636-e30b-3e0b9ba91078"
       },
       "outputs": [
         {
@@ -260,11 +270,11 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "oLNyhVgtXtML",
-        "outputId": "e6b1b327-2e84-43cc-d741-c163e755c098",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oLNyhVgtXtML",
+        "outputId": "e6b1b327-2e84-43cc-d741-c163e755c098"
       },
       "outputs": [
         {
@@ -370,11 +380,11 @@
       "cell_type": "code",
       "execution_count": 25,
       "metadata": {
-        "id": "IlQylO1IXtMM",
-        "outputId": "8e95be5c-f69d-4c14-9a92-f1ba90bb4f48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IlQylO1IXtMM",
+        "outputId": "8e95be5c-f69d-4c14-9a92-f1ba90bb4f48"
       },
       "outputs": [
         {
@@ -465,12 +475,12 @@
       "cell_type": "code",
       "execution_count": 28,
       "metadata": {
-        "id": "O6zPJ9RIXtMM",
-        "outputId": "ded36a45-f551-4eb3-e404-6f6bfabdb0be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "O6zPJ9RIXtMM",
+        "outputId": "ded36a45-f551-4eb3-e404-6f6bfabdb0be"
       },
       "outputs": [
         {
@@ -562,7 +572,8 @@
       "version": "3.9.16"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
