--- a/week06/week06_assignment_2.ipynb
+++ b/week06/week06_assignment_2.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 41,
       "metadata": {
         "id": "fP3lwBZnXtMH"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 42,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -83,6 +83,20 @@
       "source": [
         "# Put your solution here\n",
         "def allergy_count(json_file):\n",
+        "    \"\"\"\n",
+        "    json_file(str) -> int\n",
+        "\n",
+        "    This function reads a JSON file and checks if it contains a 'entry' key.\n",
+        "    If the 'entry' key is present, it returns the number of entries under it.\n",
+        "    If the file does not exist, it prints a message and returns 0.\n",
+        "    If there is an error decoding the JSON file, it prints an error message and returns 0.\n",
+        "\n",
+        "    >>> type(allergy_count(ALLERGIES_FILE))\n",
+        "    int\n",
+        "\n",
+        "    >>> allergy_count(ALLERGIES_FILE)\n",
+        "    4\n",
+        "    \"\"\"\n",
         "    try:\n",
         "        with open(json_file, 'r') as file:\n",
         "            data = json.load(file)\n",
@@ -100,13 +114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KvYYHWj5XtMJ",
-        "outputId": "f989d58f-bfad-4f4c-cf10-fc11fb68540f"
+        "outputId": "509da04c-7070-4f44-f956-b0fbab79872f"
       },
       "outputs": [
         {
@@ -117,7 +131,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 43
         }
       ],
       "source": [
@@ -126,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 44,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -157,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 45,
       "metadata": {
         "id": "ccB1xrgYXtMK"
       },
@@ -165,6 +179,22 @@
       "source": [
         "# Put your solution here\n",
         "def patient_count(json_file):\n",
+        "    \"\"\"\n",
+        "    json_file(str) -> int\n",
+        "\n",
+        "    This function reads a JSON file containing medical data and checks if it contains an 'entry' key.\n",
+        "    If the 'entry' key is present, it iterates through the entries and extracts patient information.\n",
+        "    It counts the number of unique patients and returns that count.\n",
+        "    If the file does not exist, it prints a message and returns 0.\n",
+        "    If there is an error decoding the JSON file, it prints an error message and returns 0.\n",
+        "\n",
+        "    >>> type(patient_count(ALLERGIES_FILE))\n",
+        "    int\n",
+        "\n",
+        "    >>> patient_count(ALLERGIES_FILE)\n",
+        "    2\n",
+        "    \"\"\"\n",
+        "\n",
         "    try:\n",
         "        with open(json_file, 'r') as file:\n",
         "            data = json.load(file)\n",
@@ -186,13 +216,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRsfojNsXtMK",
-        "outputId": "848fcb98-9bfb-4636-e30b-3e0b9ba91078"
+        "outputId": "a54444e5-9a58-4cf9-acc0-461e02154f89"
       },
       "outputs": [
         {
@@ -203,7 +233,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 46
         }
       ],
       "source": [
@@ -212,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 47,
       "metadata": {
         "id": "bwTudyzaXtMK"
       },
@@ -235,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 48,
       "metadata": {
         "id": "lsYg0rOuXtML"
       },
@@ -243,6 +273,22 @@
       "source": [
         "# Put your solution here\n",
         "def allergy_per_patient(json_file):\n",
+        "    \"\"\"\n",
+        "    json_file(str) -> dict\n",
+        "\n",
+        "    This function reads a JSON file containing medical data and checks if it contains an 'entry' key.\n",
+        "    If the 'entry' key is present, it iterates through the entries and extracts patient information.\n",
+        "    It counts the number of allergies for each patient and stores the count in a dictionary.\n",
+        "    The dictionary is then returned, where keys are patient names, and values are the corresponding allergy counts.\n",
+        "    If the file does not exist, it prints a message and returns an empty dictionary.\n",
+        "    If there is an error decoding the JSON file, it prints an error message and returns an empty dictionary.\n",
+        "\n",
+        "    >>> type(allergy_per_patient(ALLERGIES_FILE))\n",
+        "    dict\n",
+        "\n",
+        "    >>> allergy_per_patient(ALLERGIES_FILE)\n",
+        "    {'Paul Boal': 1, 'Jason Argonaut': 3}\n",
+        "    \"\"\"\n",
         "    try:\n",
         "        with open(json_file, 'r') as file:\n",
         "            data = json.load(file)\n",
@@ -268,13 +314,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLNyhVgtXtML",
-        "outputId": "e6b1b327-2e84-43cc-d741-c163e755c098"
+        "outputId": "48a90849-c748-4be0-f9fe-804ccbe99cc9"
       },
       "outputs": [
         {
@@ -285,7 +331,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 49
         }
       ],
       "source": [
@@ -294,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 50,
       "metadata": {
         "id": "d8zpIrcVXtML"
       },
@@ -333,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 51,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -348,6 +394,23 @@
       "source": [
         "# Put your solution here\n",
         "def allergy_list(json_file):\n",
+        "    \"\"\"\n",
+        "    json_file (str) -> list\n",
+        "\n",
+        "    This function reads a JSON file containing medical data and checks if it contains an 'entry' key.\n",
+        "    If the 'entry' key is present, it iterates through the entries and extracts patient names, allergies, and reactions.\n",
+        "    It constructs a list of lists, where each inner list contains this information.\n",
+        "    If no reaction is found for an entry, the default value \"No Reaction\" is used.\n",
+        "    The resulting list is then returned.\n",
+        "    If the file does not exist, it prints a message and returns an empty list.\n",
+        "    If there is an error decoding the JSON file, it prints an error message and returns an empty list.\n",
+        "\n",
+        "    >>> allergy_list(ALLERGIES_FILE)\n",
+        "    [['Jason Argonaut', 'PENICILLIN G', 'Hives'],\n",
+        "    ['Jason Argonaut', 'SHELLFISH-DERIVED PRODUCTS', 'Itching'],\n",
+        "    ['Jason Argonaut', 'STRAWBERRY', 'Anaphylaxis'],\n",
+        "    ['Paul Boal', 'PENICILLIN G', 'Bruising']]\n",
+        "    \"\"\"\n",
         "    try:\n",
         "        with open(json_file, 'r') as file:\n",
         "            data = json.load(file)\n",
@@ -378,13 +441,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IlQylO1IXtMM",
-        "outputId": "8e95be5c-f69d-4c14-9a92-f1ba90bb4f48"
+        "outputId": "8796ebd0-4356-4e6f-a283-075399df526f"
       },
       "outputs": [
         {
@@ -398,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 52
         }
       ],
       "source": [
@@ -407,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 53,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -449,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 54,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -464,6 +527,25 @@
       "source": [
         "# Put your solution here\n",
         "def allergy_reaction(json_file, patient, substance):\n",
+        "    \"\"\"\n",
+        "    (json_file(str),str, str) -> str or None\n",
+        "\n",
+        "    This function first calls the 'allergy_list' function to obtain a list of allergies with patient names and reactions.\n",
+        "    It then iterates through the list to find the entry that matches the provided patient and substance.\n",
+        "    If a matching entry is found, the associated reaction is returned.\n",
+        "    If no matching entry is found, the function returns None.\n",
+        "\n",
+        "    >>> allergy_reaction(ALLERGIES_FILE, 'Jason Argonaut', 'PENICILLIN G')\n",
+        "    'Hives'\n",
+        "    >>> allergy_reaction(ALLERGIES_FILE, 'Jason Argonaut', 'SHELLFISH-DERIVED PRODUCTS')\n",
+        "    'Itching'\n",
+        "    >>> allergy_reaction(ALLERGIES_FILE, 'Jason Argonaut', 'STRAWBERRY')\n",
+        "    'Anaphylaxis'\n",
+        "    >>> allergy_reaction(ALLERGIES_FILE, 'Jason Argonaut', 'PENICILLIN')\n",
+        "    None\n",
+        "    >>> allergy_reaction(ALLERGIES_FILE, 'Paul Boal', 'PENICILLIN G')\n",
+        "    'Bruising'\n",
+        "    \"\"\"\n",
         "    allergy_data = allergy_list(json_file)\n",
         "    for entry in allergy_data:\n",
         "        if entry[0] == patient and entry[1] == substance:\n",
@@ -473,14 +555,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "O6zPJ9RIXtMM",
-        "outputId": "ded36a45-f551-4eb3-e404-6f6bfabdb0be"
+        "outputId": "93509d07-fe2c-468e-8149-97b48970f337"
       },
       "outputs": [
         {
@@ -494,7 +576,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 55
         }
       ],
       "source": [
@@ -503,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 56,
       "metadata": {
         "nbgrader": {
           "grade": true,
