--- a/week07/week07_assignment_2.ipynb
+++ b/week07/week07_assignment_2.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/week07/week07_assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tYPbASQHio9l"
       },
       "source": [
@@ -81,9 +91,9 @@
         "    \"grades\": {\n",
         "        \"Week 1\": [10, \"Getting familiar with Google colab and Github\"],\n",
         "        \"Week 2\": [9, \"Getting familar with creating and accessing functions\"],\n",
-        "        \"Week 3\": [10, \"Using conditional statements in functions\"],\n",
+        "        \"Week 3\": [8, \"Using conditional statements in functions\"],\n",
         "        \"Week 4\": [10, \"Traversing through dictionary\"],\n",
-        "        \"Week 6\": [5, \"Able to write meaningful functions that use dict and lists within 15 minutes\"]\n",
+        "        \"Week 6\": [15, \"Able to write meaningful functions that use dict and lists within 15 minutes\"]\n",
         "    }\n",
         "}\n",
         "\"\"\""
@@ -105,7 +115,7 @@
       "execution_count": 8,
       "metadata": {
         "id": "Ev8ZVVW0io9t",
-        "outputId": "c3e7bdf3-36a1-4b18-962d-904d115a3dfb",
+        "outputId": "472ba059-e6b4-4d4d-ecf6-d2d6852576a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -121,9 +131,9 @@
             "Grades:\n",
             "- Week 1: Scored 10. Getting familiar with Google colab and Github\n",
             "- Week 2: Scored 9. Getting familar with creating and accessing functions\n",
-            "- Week 3: Scored 10. Using conditional statements in functions\n",
+            "- Week 3: Scored 8. Using conditional statements in functions\n",
             "- Week 4: Scored 10. Traversing through dictionary\n",
-            "- Week 6: Scored 5. Able to write meaningful functions that use dict and lists within 15 minutes\n"
+            "- Week 6: Scored 15. Able to write meaningful functions that use dict and lists within 15 minutes\n"
           ]
         }
       ],
@@ -181,7 +191,7 @@
       "execution_count": 9,
       "metadata": {
         "id": "6aYrY3sPio9v",
-        "outputId": "ca3807bb-a2cd-49b8-d19a-747b67758e6c",
+        "outputId": "627118e6-f8e7-497c-c8d7-e8aa0159405a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -246,7 +256,8 @@
       "version": "3.9.16"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
